# winsoftvol

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  release.yml
assets/: winsoftvol.manifest
src/: about.rs  autostart.rs  config.rs  main.rs  notification.rs  softvol.rs  tray.rs  updater.rs  volcap.rs
src/audio/: device.rs  device_cb.rs  endpoint_cb.rs  mod.rs  session_cb.rs  session_mgr.rs
